Stubbs for BSnT service
