# api/swagger.json
@@ -268,6 +268,15 @@
           }
         }
       }
+    },
+    "/api/refresh": {
+      "post": {
+        "responses": {
+          "200": {
+            "description": "Default Response"
+          }
+        }
+      }
     }
   },
   "servers": [
